--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.2.4",
         "axios": "^0.21",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.2.13",
+        "postcss": "^8.3.0",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
